# mtrack

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  main.cpp  mtrack  todo.txt
res/: #main_window.glade#  main_window.glade  main_window.glade~
res/cmake/: Findavcodec.cmake  Findavutil.cmake
src/: CMakeLists.txt  cmanager.cpp  cmanager.h  main.cpp  main_window.glade~  primitives.h  project.cpp  ui.cpp  ui.h  video.cpp  video.h
src/commands/: command.h  import_clip_command.cpp  import_clip_command.h  undo_command.cpp  undo_command.h
src/dialogs/: progress_dialog.cpp  progress_dialog.h
src/models/: projectitem_model.cpp  projectitem_model.h
src/playback/: playback_manager.cpp  playback_manager.h  playback_source.cpp  playback_source.h
src/project/: ffmpeg_video_clip.cpp  ffmpeg_video_clip.h  project.cpp  project.h  project_item.cpp  project_item.h
src/render/: cmanager.cpp  cmanager.h  context_manager.cpp  context_manager.h
src/ui/: main_window.cpp  main_window.h  timeline_widget.cpp  timeline_widget.h
